added header h1 and p styles

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -10,7 +10,10 @@
 }
 
 .header {
+    color: white;
+    font-family: 'Montserrat';
     align-self: center;
+    text-align: center;
 
     &__skew {
         clip-path: polygon(0 0, 100% 0%, 100% 25%, 0 50%);
@@ -33,6 +36,20 @@
         height: 110vh;
         width: 100vw;
         background-color: #00CB79;
+    }
+
+    h1 {
+        font-size: 36px;
+        font-weight: 500;
+        line-height: 44px;
+    }
+    
+    p {
+        color: rgba(255, 255, 255, 0.75);
+        font-size: 15px;
+        font-weight: 300;
+        line-height: 19px;
+        width: 403px;
     }
 }
 
