--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -66,8 +66,14 @@
 
     &__inputs {
         display: grid;
-        grid-template-rows: repeat(4, 1fr);
+        grid-template-rows: repeat(4, 27px);
         grid-template-columns: repeat(4, 1fr);
+
+        grid-row-gap: 120px;
+        margin-top: 66px;
+        margin-left: 83px;
+        margin-right: 83px;
+
 
         justify-items: center;
         align-items: center;
@@ -80,11 +86,14 @@
 
     font-family: 'Montserrat';
     text-align: center;
+    grid-column-gap: 8px;
+
+    height: 47px;
 
     &__title {
         grid-column: input-s/input-e;
         
-        border-top: 1px solid #B3B3B3;
+        
         color: #B3B3B3;
         font-size: 12px;
         font-weight: 300;
@@ -96,7 +105,15 @@
         border: none;
         font-size: 15px;
         text-align: center;
-        
+        padding: 4px 0;
+        border-bottom: 1px solid #B3B3B3;
+        margin-bottom: 1px;
+        transition: all .3s ease-in-out;
+        &:focus {
+            outline: none;
+            border-bottom: 1px solid #00CB79;
+        }
+
     }
 
     &__number {
@@ -107,6 +124,8 @@
         font-size: 20px;
         line-height: 24px;
         padding-top: 1px;
+        height: 26px;
+        width: 26px;
 
         border-radius: 50%;
     }
