styled generate madlib and clear from buttons

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,3 +1,18 @@
+@mixin button {
+    height: 50px;
+        width: 300px;
+        border-radius: 4px;
+        box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .1);
+        color: white;
+        font-family: 'Montserrat';
+        font-size: 22px;
+        text-align: center;
+        justify-self: center;
+        &:focus {
+            outline: none;
+        }
+}
+
 .home {
     position: relative;
 
@@ -77,6 +92,16 @@
 
         justify-items: center;
         align-items: center;
+    }
+
+    &__generate {
+        background-color: #00CB79;
+        @include button;
+    }
+
+    &__clear {
+        background-color: #45B0E5;
+        @include button;
     }
 }
 
