--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -13,6 +13,14 @@
         }
 }
 
+.gray {
+    background: #B3B3B3;
+}
+
+.green {
+    background: #00CB79;
+}
+
 .home {
     position: relative;
 
@@ -165,7 +173,6 @@
     &__number {
         grid-column: number-s/number-e;
 
-        background-color: #00CB79;
         color: white;
         font-size: 20px;
         line-height: 24px;
