--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -123,11 +123,27 @@
 
         justify-self: center;
         margin-bottom: 84px;
+
+        font-family: "Montserrat";
+
+        &__label {
+            height: 18px;
+            width: 18px;
+            line-height: 22px;
+            background-color: black;
+            border-radius: 50%;
+            font-size: 14px;
+            
+            text-align: center;
+            color: white;
+            
+            display: inline-block;
+            margin: 4px;
+        }
         
         p {
             line-height: 29px;
             padding: 50px 47px;
-            font-family: "Montserrat";
             font-size: 16px;
             font-weight: 300;
         }
@@ -183,4 +199,6 @@
         border-radius: 50%;
     }
 }
+
+
 
